--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.wiffi-wz",
-  "version": "0.3.3",
+  "version": "1.0.0",
   "description": "Wiffi-wz Adapter",
   "author": {
     "name": "Christian Vorholt",
@@ -16,16 +16,9 @@
   "dependencies": {
   },
   "devDependencies": {
-    "grunt": "~0.4.4",
-    "grunt-replace": "~0.7.6",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-jscs": "~0.6.1",
-    "grunt-http": "~1.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compress": "~0.8.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-exec": "~0.4.5"
-  },
+	"gulp": "^3.9.1",
+    "mocha": "^4.1.0",
+    "chai": "^4.1.2"  },
   "bugs": {
     "url": "https://github.com/t4qjXH8N/ioBroker.wiffi-wz/issues"
   },
