--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Wiffi-wz Adapter",
   "author": {
     "name": "Christian Vorholt",
-    "email": "chvorholt@mail.com"
+    "email": "chvorholt@gmail.com"
   },
   "homepage": "https://github.com/t4qjXH8N/ioBroker.wiffi-wz",
   "readme": "https://github.com/t4qjXH8N/ioBroker.wiffi-wz/master/README.md",
