--- a/wiffi_config.json
+++ b/wiffi_config.json
@@ -139,12 +139,12 @@
 				"desc": "ip-address"
 			},
 			{
-				"id": "w_temperature",
+				"id": "w_temperatur",
 				"type": "number",
 				"read": true,
 				"write": false,
 				"unit": "°C",
-				"min": -10,
+				"min": -40,
 				"max": 60,
 				"role": "value.temperature",
 				"desc": "temperature"
@@ -155,7 +155,7 @@
 				"read": true,
 				"write": false,
 				"unit": "°C",
-				"min": -20,
+				"min": -40,
 				"max": 60,
 				"role": "value.temperature.windchill",
 				"desc": "windchill temperature"
@@ -166,13 +166,13 @@
 				"read": true,
 				"write": false,
 				"unit": "°C",
-				"min": -20,
+				"min": -40,
 				"max": 60,
 				"role": "value.temperature.dewpoint",
 				"desc": "taupunkt"
 			},
 			{
-				"id": "w_humidity",
+				"id": "w_feuchte_rel",
 				"type": "number",
 				"read": true,
 				"write": false,
@@ -183,7 +183,7 @@
 				"desc": "relative humidity"
 			},
 			{
-				"id": "w_hum_abs",
+				"id": "w_feuchte_abs",
 				"type": "number",
 				"read": true,
 				"write": false,
@@ -192,21 +192,23 @@
 				"desc": "absolute humidity"
 			},
 			{
-				"id": "w_wind_avg",
+				"id": "w_wind_mittel",
 				"type": "number",
 				"read": true,
 				"write": false,
 				"unit": "m/s",
-				"role": "value.speed.wind",
+				"min": 0,
+				"role": "value.wind.speed.average",
 				"desc": "average wind speed"
 			},
 			{
-				"id": "w_wind_peak",
+				"id": "w_wind_spitze",
 				"type": "number",
 				"read": true,
 				"write": false,
 				"unit": "m/s",
-				"role": "value.speed.max.wind",
+				"min": 0,
+				"role": "value.wind.speed.max",
 				"desc": "peak wind speed"
 			},
 			{
@@ -215,16 +217,18 @@
 				"read": true,
 				"write": false,
 				"unit": "bft",
-				"role": "value",
+				"min": 0,
+				"max": 12,
+				"role": "value.wind.speed.force",
 				"desc": "wind force"
 			},
 			{
-				"id": "w_wind_direction",
+				"id": "w_windrichtung",
 				"type": "string",
 				"read": true,
 				"write": false,
 				"unit": "",
-				"role": "weather.direction.wind",
+				"role": "value.wind.direction",
 				"desc": "wind direction"
 			},
 			{
@@ -235,44 +239,47 @@
 				"min": 0,
 				"max": 360,
 				"unit": "grad",
-				"role": "value.direction.wind",
+				"role": "value.wind.direction",
 				"desc": "wind angle"
 			},
 			{
-				"id": "w_rain_activity",
+				"id": "w_regensensor_wert",
 				"type": "number",
 				"read": true,
 				"write": false,
+				"min": 0,
 				"unit": "",
-				"role": "value",
+				"role": "value.rain.sensor",
 				"desc": "rain notification value"
 			},
 			{
-				"id": "w_rain_status",
+				"id": "w_regenmelder",
 				"type": "boolean",
 				"def": false,
 				"read": true,
 				"write": false,
 				"unit": "",
-				"role": "sensor.rain",
+				"role": "value.rain.state",
 				"desc": "rain state"
 			},
 			{
-				"id": "w_rain_intensity",
+				"id": "w_regenstaerke",
 				"type": "number",
 				"read": true,
 				"write": false,
 				"unit": "mm/h",
-				"role": "value.rain",
+				"min": 0,
+				"role": "value.rain.intensity",
 				"desc": "rain intensity"
 			},
 			{
-				"id": "w_rain_volume_1",
+				"id": "w_regen_letzte_h",
 				"type": "number",
 				"read": true,
 				"write": false,
 				"unit": "mm",
-				"role": "value.rain.hour",
+				"min": 0,
+				"role": "value.rain.1hour",
 				"desc": "rain per hour"
 			},
 			{
@@ -281,7 +288,8 @@
 				"read": true,
 				"write": false,
 				"unit": "mm",
-				"role": "value.rain",
+				"min": 0,
+				"role": "value.rain.24hours",
 				"desc": "rain per 24 hours"
 			},
 			{
@@ -290,17 +298,9 @@
 				"read": true,
 				"write": false,
 				"unit": "mm",
-				"role": "value.precipitation",
+				"min": 0,
+				"role": "value.rain.yesterday",
 				"desc": "rain yesterday"
-			},
-			{
-				"id": "w_bodenfeuchte",
-				"type": "number",
-				"read": true,
-				"write": false,
-				"unit": "",
-				"role": "value",
-				"desc": "bodenfeuchte"
 			},
 			{
 				"id": "w_barometer",
@@ -308,6 +308,8 @@
 				"read": true,
 				"write": false,
 				"unit": "mb",
+				"min": 300,
+				"max": 1100,
 				"role": "value.pressure",
 				"desc": "barometer"
 			},
@@ -317,16 +319,18 @@
 				"read": true,
 				"write": false,
 				"unit": "",
-				"role": "text",
+				"role": "value.pressure.trend",
 				"desc": "luftdrucktrend"
 			},
 			{
-				"id": "w_sky_temp",
+				"id": "w_himmeltemperatur",
 				"type": "number",
 				"read": true,
 				"write": false,
 				"unit": "°C",
-				"role": "value.temperature",
+				"min": -40,
+				"max": 80,
+				"role": "value.temperature.sky",
 				"desc": "sky temperature"
 			},
 			{
@@ -335,16 +339,18 @@
 				"read": true,
 				"write": false,
 				"unit": "°C",
-				"role": "value.temperature",
+				"min": -40,
+				"max": 80,
+				"role": "value.temperature.sun",
 				"desc": "sun temperature"
 			},
 			{
-				"id": "w_diff_temp",
+				"id": "w_sonne_diff_temp",
 				"type": "number",
 				"read": true,
 				"write": false,
 				"unit": "°C",
-				"role": "value.temperature",
+				"role": "value.temperature.diff",
 				"desc": "sun difference temperature"
 			},
 			{
@@ -353,8 +359,18 @@
 				"read": true,
 				"write": false,
 				"unit": "",
-				"role": "indicator",
+				"role": "value.sun.state",
 				"desc": "sunshine"
+			},
+			{
+				"id": "w_sonnenstunden_heute",
+				"type": "number",
+				"read": true,
+				"write": false,
+				"unit": "hour",
+				"min": 0,
+				"role": "value.sun.hours",
+				"desc": "sunshine hours today"
 			},
 			{
 				"id": "w_lux",
@@ -388,6 +404,24 @@
 				"unit": "°",
 				"role": "value",
 				"desc": "calculated azimut"
+			},
+			{
+				"id": "w_minuten_vor_sa",
+				"type": "number",
+				"read": true,
+				"write": false,
+				"unit": "min",
+				"role": "value",
+				"desc": "minutes before sunrise"
+			},
+			{
+				"id": "w_minuten_vor_su",
+				"type": "number",
+				"read": true,
+				"write": false,
+				"unit": "min",
+				"role": "value",
+				"desc": "minutes before sunset"
 			}
 		]
 	},
