--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
   },
   "homepage": "https://github.com/t4qjXH8N/ioBroker.wiffi-wz",
   "readme": "https://github.com/t4qjXH8N/ioBroker.wiffi-wz/master/README.md",
-  "keywords": ["ioBroker", "wiffi-wz"],
+  "keywords": [
+    "ioBroker",
+    "wiffi-wz"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/t4qjXH8N/ioBroker.wiffi-wz.git"
   },
   "dependencies": {
+    "semver": "^5.5.1",
+    "jsonpath": "^1.0.0"
   },
   "devDependencies": {
-	"gulp": "^3.9.1",
+    "gulp": "^3.9.1",
     "mocha": "^4.1.0",
-    "chai": "^4.1.2"  },
+    "chai": "^4.1.2"
+  },
   "scripts": {
     "test": "node node_modules/mocha/bin/mocha --exit"
   },
