added buzzer functionality (may work for relais as well)

--- a/state_extensions.json
+++ b/state_extensions.json
@@ -27,6 +27,20 @@
 		}
 	},
 	{
+		"expression": "buzzer",
+		"extensions": {
+			"role": "switch",
+			"write": true
+		}
+	},
+	{
+		"expression": "relais",
+		"extensions": {
+			"role": "switch",
+			"write": true
+		}
+	},
+	{
 		"expression": "temperature",
 		"extensions": {
 			"role": "value.temperature"
