--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "url": "https://github.com/t4qjXH8N/ioBroker.wiffi-wz.git"
   },
   "dependencies": {
-    "jsonpath": "^1.0.0"
+    "jsonpath": "^1.0.0",
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
