fixed readme url

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "chvorholt@gmail.com"
   },
   "homepage": "https://github.com/t4qjXH8N/ioBroker.wiffi-wz",
-  "readme": "https://github.com/t4qjXH8N/ioBroker.wiffi-wz/master/README.md",
+  "readme": "https://github.com/t4qjXH8N/ioBroker.wiffi-wz/blob/master/README.md",
   "keywords": [
     "ioBroker",
     "wiffi-wz"
