--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.wiffi-wz",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Wiffi-wz Adapter",
   "author": {
     "name": "Christian Vorholt",
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "jsonpath": "^1.0.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
