--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   "dependencies": {
     "jsonpath": "^1.0.0",
     "request": "^2.83.0",
-    "underscore": "^1.9.1"
+    "underscore": "^1.9.1",
+    "@iobroker/adapter-core": "^1.0.3"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "mocha": "^4.1.0",
-    "chai": "^4.1.2",
-    "@iobroker/adapter-core": "^1.0.3"
+    "chai": "^4.1.2"
   },
   "scripts": {
     "test": "node node_modules/mocha/bin/mocha --exit"
