--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gulp": "^4.0.2",
     "mocha": "^8.3.2",
     "chai": "^4.3.4",
-    "@iobroker/testing": "^2.4.4"
+    "@iobroker/testing": "^2.4.4",
+    "eslint": "^7.23.0"
   },
   "scripts": {
     "test": "npm run test:package && npm run test:unit",
