--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   "bugs": {
     "url": "https://github.com/t4qjXH8N/ioBroker.wiffi-wz/issues"
   },
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "main": "main.js",
   "license": "MIT"
 }
