--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-/admin/i18n
-/.idea
-/node_modules
+.git
+.idea
+*.code-workspace
+node_modules
+nbproject
+
+# npm package files
+iobroker.*.tgz
+
+# ioBroker dev-server
+.dev-server/
+
+Thumbs.db
+
+# i18n intermediate files
+admin/i18n/flat.txt
+admin/i18n/*/flat.txt
