--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,28 @@
+.*
+node_modules/
+nbproject/
+*.code-workspace
+Thumbs.db
 gulpfile.js
-admin/i18n
-tasks
-node_modules
+
+# IDE specific
 .idea
-.git
-/node_modules
-test
-.travis.yml
-appveyor.yml
+
+# CI test files
+test/
+travis/
+appveyor.yaml
+
+# Type checking configuration
+tsconfig.json
+tsconfig.*.json
+
+# npm package files
+iobroker.*.tgz
+package-lock.json
+
+# i18n intermediate files
+admin/i18n
+
+# maintenance scripts
+maintenance/**
