--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.wiffi-wz",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Wiffi-wz Adapter",
   "author": {
     "name": "Christian Vorholt",
@@ -23,11 +23,26 @@
     "@iobroker/adapter-core": "^2.4.0"
   },
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "mocha": "^8.3.2",
-    "chai": "^4.3.4",
+    "@alcalzone/release-script": "^1.10.0",
     "@iobroker/testing": "^2.4.4",
-    "eslint": "^7.23.0"
+    "@types/chai": "^4.2.18",
+    "@types/chai-as-promised": "^7.1.4",
+    "@types/gulp": "^4.0.8",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^14.17.0",
+    "@types/proxyquire": "^1.3.28",
+    "@types/sinon": "^10.0.0",
+    "@types/sinon-chai": "^3.2.5",
+    "axios": "^0.21.1",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^7.26.0",
+    "gulp": "^4.0.2",
+    "mocha": "^8.4.0",
+    "proxyquire": "^2.1.3",
+    "sinon": "^10.0.0",
+    "sinon-chai": "^3.6.0",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "test": "npm run test:package && npm run test:unit",
