--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -49,7 +49,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [12.x, 14.x]
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
@@ -97,7 +97,7 @@ jobs:
       - name: Extract the version and commit body from the tag
         id: extract_release
         # The body may be multiline, therefore we need to escape some characters
-        run: |
+        run: | 
           VERSION="${{ github.ref }}"
           VERSION=${VERSION##*/v}
           echo "::set-output name=VERSION::$VERSION"
